stop overflowing

--- a/styles.css
+++ b/styles.css
@@ -197,9 +197,9 @@ p {
 }
 
 #welcome-page-mobile .ellipse-accent {
-    bottom: -246px;
-    right: -284px;
-    z-index: -1;
+    bottom: 0px;
+    right: 0px;
+    z-index: 0;
 }
 
 #arrow-right {
@@ -224,14 +224,12 @@ p {
 }
 
 .ellipse-accent {
-    width: 860px;
-    height: 860px;
+    width: 720px;
+    height: 660px;
     position: absolute;
-    bottom: -196px;
-    right: -144px;
-    overflow: hidden;
-    border-radius: 860.914px;
-    background: radial-gradient(50% 50% at 50% 50%, rgba(235, 255, 107, 0.10) 10%, rgba(217, 217, 217, 0.00) 100%);
+    bottom: 0px;
+    right: 0px;
+    background-image: radial-gradient(25% 25% at 700px 600px, rgba(235, 255, 107, 0.10) 10%, rgba(217, 217, 217, 0.00) 100%);
 }
 
 #welcome-page-mobile {
